--- a/style.css
+++ b/style.css
@@ -1,30 +1,57 @@
-
 body {
-    display: flex;
-    justify-content: center;
-    align-content: center;
+   display: flex;
+   justify-content: center;
+   align-content: center;
+   flex-direction: column;
+   flex-wrap: wrap;
+   background-color: rgb(171, 236, 240);
 }
 
+.header {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-style: oblique;
+    font-size: 45px;
+    text-align: center;
+    background-color: rgb(235, 215, 215);
+    padding: 20px;
+    border-radius: 25px;
+    box-shadow: 1px 10px 15px black
+    
+}
+
+.btn {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-style: oblique;
+    font-size: 45px;
+    text-align: center;
+    background-color: rgb(235, 215, 215);
+    padding: 10px;
+    border-radius: 25px;
+    box-shadow: 1px 10px 15px black;
+    margin-bottom: 25px;
+}
 
 .container {
-    display: grid;
-    
+    display:grid ;
+    grid-template-columns: repeat(16, 1fr);
+    grid-template-rows: repeat(16, 1fr);
     width: 960px;
     height: 960px;
-    background-color: rgb(212, 192, 192);
+    background-color: rgb(233, 223, 223);
+    border: 2px solid rgb(0, 0, 0);
+    box-shadow: 1px 10px 15px black;
 }
 
 
-.colRow{
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: auto;
-    border-style: dotted, black;
+.colRow {
 
+    width: 100%;
+    height: auto;
+    border: 1px dotted rgb(206, 195, 195);
 
 }
 
-/* .hover {
+.hover {
     background-color: black;
-} */
+}
 
