--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
    display: flex;
    justify-content: center;
-   align-content: center;
    flex-direction: column;
+   align-items: center;
    flex-wrap: wrap;
    background-color: rgb(171, 236, 240);
 }
@@ -20,6 +20,8 @@ body {
 }
 
 .btn {
+    
+    width: 200px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-style: oblique;
     font-size: 45px;
@@ -29,17 +31,20 @@ body {
     border-radius: 25px;
     box-shadow: 1px 10px 15px black;
     margin-bottom: 25px;
+    transition: 0.7s;
 }
 
-
+.btn:hover{
+    transform: scale(1.1);
+    border: solid black 2px;
+}
 
 #container {
 
     display: grid;
-    
-    width: 960px;
-    height: 960px;
-    background-color: rgb(233, 223, 223);
+    width: 70vh;
+    height: 70vh;
+    background-color: rgb(255, 247, 247);
     border: 2px solid rgb(0, 0, 0);
     box-shadow: 1px 10px 15px black;
 }
@@ -48,12 +53,21 @@ body {
     
     max-width: 60px;
     max-height: 60px;
-    border: dotted black 1px;
-
 }
-
 
 .hover {
     background-color: black;
 }
+
+.btnColor {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-style: oblique;
+    font-size: 45px;
+    text-align: center;
+    background-color: rgb(235, 215, 215);
+    padding: 10px;
+    border-radius: 25px;
+    box-shadow: 1px 10px 15px black;
+    margin-bottom: 25px;
+}   
 
